adding end-of-day updates

--- a/p1_project-files/src/main/resources/public/home.html
+++ b/p1_project-files/src/main/resources/public/home.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="appCSS.css">
     <script src="appJS.js"></script>
 </head>
-<body onload="loadPageForUserWithSessionStorage()">
+<body onload="loadPageForUserWithSessionStorage(), userIsEmployee()">
     <div id="homeRootDiv">
         <fieldset>
         <br />
