--- a/p1_project-files/bin/src/main/resources/public/home.html
+++ b/p1_project-files/bin/src/main/resources/public/home.html
@@ -19,6 +19,8 @@
             <thead>
                 <tr><th colspan="12"><h2 id="homeTableHeader">Your reimbursement requests:</h2></tr>
                 <tr>
+                    <td>Staff First Name: </td>
+                    <td>Staff Last Name: </td>
                     <td>Request Date:</td>
                     <td>Event Date:</td>
                     <td>Event Time:</td>
